// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article in a list renders correctly 1`] = `
<article>
  <header>
    <Heading
      level="h2"
    >
      <Link
        href="/test-slug"
      >
        Test Article
      </Link>
    </Heading>
    <p
      css={
        Object {
          "fontSize": "0.75rem",
          "marginBottom": "0.79rem",
        }
      }
    >
      <time
        dateTime="2019-02-05T01:17:07.551Z"
      >
        Monday, February 4, 2019
      </time>
       — 
      5
       minute read
    </p>
    <MarginFix />
  </header>
  <Markdown
    htmlAst={
      Object {
        "excerpted": true,
      }
    }
  />
  <footer
    css={
      Object {
        "marginTop": "1.58rem",
      }
    }
  >
    <Link
      href="/test-slug"
    >
      Read More…
    </Link>
  </footer>
</article>
`;

exports[`Article standalone renders correctly 1`] = `
<article>
  <header>
    <Heading
      level="h1"
    >
      Test Article
    </Heading>
    <p
      css={
        Object {
          "fontSize": "0.75rem",
          "marginBottom": "0.79rem",
        }
      }
    >
      <time
        dateTime="2019-02-05T01:17:07.551Z"
      >
        Monday, February 4, 2019
      </time>
       — 
      5
       minute read
    </p>
  </header>
  <Markdown
    htmlAst={
      Object {
        "excerpted": false,
      }
    }
  />
</article>
`;
